Fix cropped font

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   }
 
   .breaths {
-    font-size: 0.8rem !important;
+    font-size: 0.7rem !important;
   }
 
   .instructions {
